[tool.poetry]
name = "quint"
version = "0.1.0"
description = "State of the art audio summarization model."
authors = [
    "Polovinkin Nikita <poloniki@ya.ru>",  # Principal author
    "Jason McVetta <jmcvetta@hey.com>", # Packaging
]
license = "MIT"  # TBD - https://github.com/poloniki/quint/issues/10
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<3.13"

bertopic = "^0.15.0"
fastapi = "^0.100.0"
gcsfs = "^2023.6.0"
google-cloud-speech = "^2.21.0"
google-cloud-storage = "^2.10.0"
joblib = "^1.3.1"
llvmlite = "^0.40.1"
memoized-property = "^1.0.3"
mlflow = "^2.5.0"
numba = "^0.57.1"
pandas = "^2.0.3"
protobuf = "^4.23.4"
pydub = "^0.25.1"
python-multipart = "^0.0.6"
pytz = "^2023.3"
s3fs = "^2023.6.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
sentence-transformers = "^2.2.2"
soundfile = "^0.12.1"
spacy = "^3.6.0"
termcolor = "^2.3.0"
uvicorn = "^0.23.0"
youtube-transcript-api = "^0.6.1"
torch = {version = "^2.0.1+cpu", source = "pytorch"}
torchvision = {version = "^0.15.2+cpu", source = "pytorch"}
torchaudio = {version = "^2.0.2+cpu", source = "pytorch"}


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
coverage = "^7.2.7"
pytest = "^7.4.0"
ipython = "^8.14.0"
prospector = {extras = ["with-everything"], version = "^1.10.2"}



[tool.poetry.group.frontend.dependencies]
streamlit = "^1.24.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
